[tool.poetry]
name = "heterogeneous-vaes"
version = "0.1.0"
description = ""
authors = ["BirdyLiu6471023 <sl5247@columbia.edu>"]
readme = "README.md"
packages = [{include = "heterogeneous_vaes"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

